Tue Oct 20 18:27:13 2020  Rob Lauer  <rlauer6@comcast.net>

	[requirements.txt]:
	* makala/data/Makefile.jinja2
	- which python, which pip
	- add dependency on requirements.txt for zipfile
	* requirements.txt: new

	[source_arn]:
	* makala/data/Makefile.jinja2
	- only add source-arn, source-account if present

	[terraform]:
	* README.md: document terraform creation
	* makala/data/Makefile.jinja2
	- add source_arn, source_account
	* makala/data/terraform.jinja2
	- renamed
	- only add source_arn if present
	- add version to template
	* setup.py: likewise
	* Makefile: likewise
	* makala/makala.py
	- create terrform directory if it does not exist
	- terraform.tf, not lambda.tf
	- make sure we have at least source account
	- add version to Makefile, terraform templates

Mon Oct  5 12:46:55 2020  Rob Lauer  <rlauer6@comcast.net>

	[-source_arn]:
	* makala/data/Makefile.jinja2
	* makala/makala.py
	* makala/data/terraform.jinja2
	* setup.py

Fri Oct  2 16:57:05 2020  Rob Lauer  <rlauer6@comcast.net>

	[--terraform]:
	* makala/data/lambda.jinja2: new
	* Makefile
	- python3
	- added lambda.jinja2
	* setup.py: add lambda.jinja2
	* makala/lambda_config.py
	(source_arn): new
	* makala/makala.py
	- add --terraform
	- add --version
	(render_makefile): renamed render_output()

Mon Jul 27 16:31:42 2020  Rob Lauer  <rlauer6@comcast.net>

	* makala/makala.py:
	(main): template_dir, not templat_dir

Mon Jul 27 11:21:33 2020  Rob Lauer  <rlauer6@comcast.net>

	* Makefile: exit codes for python compile

Mon Jul 27 08:13:35 2020  Rob Lauer  <rlauer6@comcast.net>

	* README.md: log_level example
	* makala/data/Makefile.jinja2: silence some output

Mon Jul 27 08:08:33 2020  Rob Lauer  <rlauer6@comcast.net>

	* makala/data/Makefile.jinja2:
	- if no files updated in $(PACKAGES) then true

Mon Jul 27 07:59:44 2020  Rob Lauer  <rlauer6@comcast.net>
	* makala/data/Makefile.jinja2
	- pattern rule to compile python must return exit codes
	* README.md: updated pattern rule explanation per above
