@@ -1,3 +1,7 @@
 build/*
 dist/*
 makala.egg-info/*
+pyvenv.cfg
+lib64
+lib/*
+bin/*
