@@ -3,10 +3,9 @@ botocore==1.18.8
 Jinja2==2.11.2
 jmespath==0.10.0
 MarkupSafe==1.1.1
+powerline-shell==0.7.0
 python-dateutil==2.8.1
 PyYAML==5.3.1
 s3transfer==0.3.3
 six==1.15.0
 urllib3==1.25.10
-setuptools
-wheel
